APF-997-Change reverted