@@ -105,54 +105,53 @@
                         <configuration>
                             <images>
                                 <image>
-                                    <name>airwatch-connector</name>
-                                    <alias>airwatch-connector</alias>
+                                    <name>connector</name>
                                     <build>
+                                        <from>centos/systemd:latest</from>
                                         <assembly>
                                             <inline>
-                                                <files>
-                                                    <file>
-                                                        <source>${project.basedir}/src/main/resources/application.yml</source>
-                                                        <outputDirectory>./</outputDirectory>
-                                                    </file>
-                                                </files>
+                                                <id>rpm</id>
+                                                <fileSets>
+                                                    <fileSet>
+                                                        <includes>
+                                                            <include>target/**/*.rpm</include>
+                                                            <include>target/test-classes/rpmcheck/managed-apps.yml</include>
+                                                        </includes>
+                                                    </fileSet>
+                                                 </fileSets>
                                             </inline>
-                                            <targetDir>/opt/vmware/airwatch-connector</targetDir>
                                         </assembly>
-                                        <from>centos/systemd:latest</from>
-                                        <workdir>/opt/vmware/airwatch-connector</workdir>
-                                        <healthCheck>
-                                            <interval>1s</interval>
-                                            <timeout>5s</timeout>
-                                            <retries>6</retries>
-                                            <cmd>curl -f http://localhost:8080/health || exit 1</cmd>
-                                        </healthCheck>
-                                        <entryPoint>
-                                            <shell>java -server -XX:+UnlockExperimentalVMOptions \
-                                                -Xss256k \
-                                                -XX:+UseCGroupMemoryLimitForHeap \
-                                                -XX:MaxRAMFraction=1 \
-                                                -jar /opt/vmware/airwatch-connector/airwatch-connector-${project.version}.jar \
-                                                --logging.level.com.vmware=${container.logging.level} \
-                                                --spring.profiles.active=prod,external \
-                                                --tenant.publicKeyUrl="https://herocard.vmwareidentity.com/SAAS/API/1.0/REST/auth/token?attribute=publicKey&amp;format=pem" \
-                                                --spring.config.location=/opt/vmware/airwatch-connector/managed-apps.yml \
-                                                --hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=10000
-                                            </shell>
-                                        </entryPoint>
+                                        <runCmds>
+                                            <run>yum -y install /maven/target/rpm/${connector.name}-connector/RPMS/noarch/*.rpm</run>
+                                            <run>
+                                                <![CDATA[
+                                                echo "greenbox.url=https://herocard.vmwareidentity.com" \
+                                                > /etc/opt/vmware/connectors/${connector.name}/application.properties
+                                                ]]>
+                                            </run>
+                                            <run>
+                                                <![CDATA[
+                                                echo "security.oauth2.resource.jwt.key-value=foo" \
+                                                >> /etc/opt/vmware/connectors/${connector.name}/application.properties
+                                                ]]>
+                                            </run>
+                                            <run>\cp /maven/target/test-classes/rpmcheck/managed-apps.yml /etc/opt/vmware/connectors/${connector.name}/managed-apps.yml</run>
+                                        </runCmds>
+                                        <cmd>
+                                            <shell>/usr/sbin/init</shell>
+                                        </cmd>
                                     </build>
                                     <run>
-                                        <memory>${container.memory}</memory>
-                                        <ports>
-                                            <port>${docker.bind.address}:8080:8080</port>
-                                        </ports>
-                                        <env>
-                                            <SERVICE_8080_CHECK_HTTP>/health</SERVICE_8080_CHECK_HTTP>
-                                            <SERVICE_NAME>airwatch-connector</SERVICE_NAME>
-                                        </env>
+                                        <privileged>true</privileged>
+                                        <ports>connector.port:8080</ports>
                                         <wait>
-                                            <time>${docker.wait.timeout}</time>
-                                            <healthy>true</healthy>
+                                            <!-- Build will fail if not healthy within 60 seconds -->
+                                            <time>60000</time>
+                                            <http>
+                                                <url>http://localhost:${connector.port}/health</url>
+                                                <method>GET</method>
+                                                <status>200</status>
+                                            </http>
                                         </wait>
                                     </run>
                                 </image>
